# Keepers-Eliza-Plugin

./: .gitignore  README.md  package.json
Eliza/: .gitignore  Dockerfile  docker-compose.phala.yaml  index.ts
Eliza/plans/: openclaw_keeperhub_plugin_beafdb15.plan.md
Eliza/scripts/: deploy-phala.ps1
hermes-plugins/keepershub/: README.md  __init__.py  plugin.yaml  pyproject.toml
hermes-plugins/keepershub/keeperhub_plugin/: __init__.py  client.py  config.py  entry.py  tools_direct.py  tools_execution.py  tools_generate.py  tools_integrations.py  tools_marketplace.py  tools_plugins.py  tools_protocol.py  tools_shared.py  tools_status.py  tools_templates.py  tools_workflows.py
hermes-plugins/keepershub/tests/: conftest.py  test_client.py  test_marketplace_fallback.py
openclaw-plugins/keepershub/: CHANGELOG.md  README.md  openclaw.plugin.json  package.json  tsconfig.json
openclaw-plugins/keepershub/src/: client.ts  config.ts  index.ts  openclaw-shim.d.ts
openclaw-plugins/keepershub/src/__tests__/: client.test.ts  tools.test.ts
openclaw-plugins/keepershub/src/tools/: _shared.ts  direct.ts  execution.ts  generate.ts  integrations.ts  marketplace.ts  plugins.ts  protocol.ts  status.ts  templates.ts  workflows.ts
scripts/: init-submodules.js  link-workspaces.js
